# recsys-ope-platform

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: bandits_tf_agents.yaml  data_config.yaml  data_config_large.yaml  ope_obp.yaml  recbole.yaml
data/sample/: SAMPLE_MANIFEST.md  action_id_map_sample.json  bandit_feedback_sample.npz  metadata_sample.json  obd_sample.item  obd_time_sample.inter  split_manifest_sample.json  split_manifest_sample.npz
docs/: PIDA.md  RELEASE_NOTES.md  data_dictionary.md  ruff_backlog.md
docs/model_cards/: bandit_policy.md  ope_suite.md  recsys_baselines.md
scripts/: audit_recbole_contract.py  audit_recbole_data.py  audit_strict.py  clean_artifacts.py  upsample_obd.py
src/app/: __init__.py  app.py
src/bandits/: __init__.py  export_policy_for_ope.py  obd_sim_bandit_env.py  reward_model.py  train_tf_agents.py
src/data/: __init__.py  build_obd_datasets.py  data_loader.py  inspect_obd.py  privacy.py  validate_schema.py
src/ope/: __init__.py  run_ope_suite.py
src/recsys/: prepare_recbole_dataset.py  train_recbole_baselines.py
tests/data/: __init__.py  test_artifact_validation.py  test_data_shapes.py  test_identity_map.py  test_split_reproducibility.py
