[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-ope-platform"
version = "0.1.0"
description = "End-to-end platform comparing RecSys (RecBole) vs Bandits/RL (TF-Agents) with Off-Policy Evaluation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AALP", email = "user@example.com"}
]
dependencies = [
    # RecBole for recommendation systems
    "recbole>=1.2.0",
    
    # TensorFlow and TF-Agents for bandits/RL
    "tensorflow>=2.13.0",
    "tf-agents>=0.17.0",
    
    # Off-Policy Evaluation
    "obp>=0.4.1,<0.5.0",
    
    # Core data science stack
    "pandas<2.0.0",
    "numpy<2.0.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Configuration and logging
    "pyyaml>=6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Dashboard
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Linting and formatting
    "ruff>=0.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    
    # Type stubs
    "pandas-stubs>=2.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "recbole.*",
    "tf_agents.*",
    "obp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"  # --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
